[package]
name = "hex_renderer"
version = "0.2.3"
edition = "2021"
authors = ["JohnDog3112 <JohnDog3112@gmail.com>"]
description = "Renderer for patterns in hexcasting (a mod for minecraft)"
license = "MIT"
repository = "https://github.com/JohnDog3112/Hex-Renderer"
keywords = ["hexcasting", "hex"]
categories = ["rendering"]
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
rusttype = "0.9.3"
tiny-skia = "0.11.1"
